Improve repository structure and build process
- Add automated build script (build.sh) for easy VSIX creation
- Update README with clear installation and build instructions
- Improve .gitignore to exclude build artifacts
- Restructure repository for proper extension packaging
- Add version detection in build script

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-node_modules
+# Dependencies
+node_modules/
+
+# Build artifacts
 *.vsix
+extension/
+
+# IDE settings
 .vscode/settings.json
+.DS_Store
+
+# Temporary files
+*.tmp
+*.log
